Change naming standard to replace spaces with underlines

--- a/src/en/cupertino_kurt.mdx
+++ b/src/en/cupertino_kurt.mdx
@@ -5,9 +5,9 @@ short_description: "Player of Interest"
 ---
 
 **Cupertino von Kurt**, or **Cupertino Kurt**, is a Waydinian politician, serving as Prime Minister 
-since October, 2022. A member of the [Social Democrats](Social%20Democrats%20(Waydines)) party, he was previously 
+since October, 2022. A member of the [Social Democrats](Social_Democrats_(Waydines)) party, he was previously 
 king of [Waydines](Waydines) during the imperial period, president in the First Republic, and elected 
-twice as Prime Minister in the [Second Republic](Second%20Republic%20of%20Waydines). He is also a 
+twice as Prime Minister in the [Second Republic](Second_Republic_of_Waydines). He is also a 
 programmer, writer, historian, and theologian serving as a presbyter in the [Kibosaki](Kibosaki) 
 presbytery of the [Church of Made](Madeism).
 <QuickFacts title="Cupertino von Kurt">
@@ -30,7 +30,7 @@ presbytery of the [Church of Made](Madeism).
     </tr>
     <tr>
         <td>Political Party</td>
-        <td>[Social Democrats](Social%20Democrats%20(Waydines))</td>
+        <td>[Social Democrats](Social_Democrats_(Waydines))</td>
     </tr>
     <tr>
         <td>Faith</td>
@@ -61,12 +61,12 @@ As Prime Minister, Cupertino led the Constituent Assembly of Waydines, playing a
 drafting the new National Constitution, considered the most democratic in the world. His government 
 has been characterized by the strengthening of civil rights and the creation of various basic laws 
 for establishing Waydines as an organized and republican country. Although he was a controversial 
-figure in the past, especially during the period of the [Second Republic](Second%20Republic%20of%20Waydines), 
+figure in the past, especially during the period of the [Second Republic](Second_Republic_of_Waydines), 
 he is currently well-regarded by the people due to the stability and institutional advances promoted 
 during his administration.
 
 His government has distinguished itself in diplomacy, promoting peace and global cooperation. Thanks 
 to his unparalleled diplomatic skill, Waydines has become one of the most peaceful countries in the 
-world. He fostered the formation of international organizations for peace, such as the [Red Crescent](Red%20Crescent) 
-and the [Forum of Nations](Forum%20of%20Nations); as well as alliances, treaties, and pacts like the 
-[Elysian Union](Elysian%20Union) and the [Solar Pact](Solar%20Pact).
+world. He fostered the formation of international organizations for peace, such as the [Red Crescent](Red_Crescent) 
+and the [Forum of Nations](Forum_of_Nations); as well as alliances, treaties, and pacts like the 
+[Elysian Union](Elysian_Union) and the [Solar Pact](Solar_Pact).
