--- a/src/pt/delta_smp_1_e_2.mdx
+++ b/src/pt/delta_smp_1_e_2.mdx
@@ -8,7 +8,7 @@ stub: true
 
 **Delta SMP 1** foi o primeiro SMP de Worldbuilding/[Towny](https://modrinth.com/plugin/towny) da 
 franquia Delta SMP. Pouco é conhecido sobre este servidor além do fato de ser o primeiro SMP da série 
-e que ele foi hosteado no *Aternos*, diferentemente do [Delta SMP 3](Delta%20SMP%203) em diante.
+e que ele foi hosteado no *Aternos*, diferentemente do [Delta SMP 3](Delta_SMP_3) em diante.
 
 Mesmo sendo um teste, o Delta SMP 1 ajudou no desenvolvimento de [Waydines](Waydines) e criou a 
 possibilidade de futuros servidores, como foi o caso do Delta SMP 2 e seguintes.
@@ -31,5 +31,5 @@ possibilidade de futuros servidores, como foi o caso do Delta SMP 2 e seguintes.
 </QuickFacts>
 
 # Players
-Os únicos jogadores do Delta SMP 1 foram [Don Ravi](Don%20Ravi) e Delta ([Cupertino](Cupretino%20Kurt)), 
+Os únicos jogadores do Delta SMP 1 foram [Don Ravi](Don_Ravi) e Delta ([Cupertino](Cupretino_Kurt)), 
 com a possível participação de [Kid](Kid) e [Faczki](Faczki).
