--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -52,9 +52,9 @@ Houveram três principais eventos no Delta SMP 3, sendo eles:
 
 - Venda do terreno de Mitterfurt para Kid, que estabeleceu Hillpath no lugar;
 
-- Testes com armas nucleares, que foram primeiramente conceitualizadas por [Wolfi Hraje](Wolfi%20Hraje);
+- Testes com armas nucleares, que foram primeiramente conceitualizadas por [Wolfi Hraje](Wolfi_Hraje);
 
-- Segunda construção do [WTC](World%20Trade%20Center);
+- Segunda construção do [WTC](World_Trade_Center);
 
 # Galeria
 <div class="flex flex-col gallery gap-2 w-full">
