--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -9,7 +9,7 @@ short_description: "País em Elísia"
 país [elisiano](Elísia) e [brazilburguês](Brazilburg) (o que o faz nação prima de [Frigustell](Frigustell)). 
 Composta por dois distritos &mdash; a capital planejada [Mitterfurt](Mitterfurt) e a cidade de [Gremont](Gremont) 
 &mdash; e pelo subdistrito especial de [Kibosaki](Kibosaki), possui no total 14 cidadãos registrados
-oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União Elisiana](União%20Elisiana).
+oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União Elisiana](União_Elisiana).
 
 <QuickFacts title="República Parlamentarista de Waydines">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
@@ -19,10 +19,15 @@ oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União El
     </tr>
     <tr>
         <td>Línguas oficiais</td>
-        <td>Inglês, português</td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_inglesa">Inglês</a> &centerdot; 
+            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_portuguesa">português</a>
+        </td>
     </tr>
     <tr>
-        <td>Gentílico</td>
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/Gent%C3%ADlico">Gentílico</a>
+        </td>
         <td>Waydineense</td>
     </tr>
     <tr>
@@ -34,11 +39,11 @@ oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União El
     </tr>
     <tr class="small">
         <td>Primeiro-Ministro</td>
-        <td><a href="Cupertino%20Kurt">Cupertino Kurt</a></td>
+        <td><a href="Cupertino_Kurt">Cupertino Kurt</a></td>
     </tr>
     <tr>
         <td>Legislatura</td>
-        <td><a href="Parlamento%20de%20Waydines">Parlamento de Waydines</a></td>
+        <td><a href="Parlamento_de_Waydines">Parlamento de Waydines</a></td>
     </tr>
     <tr>
         <td>Formação</td>
@@ -88,7 +93,7 @@ oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União El
 
 # Etimologia
 O nome “Waydines” possui origem incerta. Foi escolhido logo após a guerra de independência, tendo 
-sido proposto por [Wolfi Hraje](Wolfi%20Hraje), que não faz mais parte da comunidade. O significado 
+sido proposto por [Wolfi Hraje](Wolfi_Hraje), que não faz mais parte da comunidade. O significado 
 original perdeu-se ao longo do tempo, entretanto, a hipótese mais provável é que derive do anglo-saxão,
 significando algo como “Povo de Grande Amor”. Em runas, seria representado como ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
 
@@ -96,8 +101,8 @@ significando algo como “Povo de Grande Amor”. Em runas, seria representado c
 
 ## Império de Waydines
 
-Em 2 de janeiro de 2021, foi criado o Reino de Brazilburg, tendo como rei [Don Ravi](Don%20Ravi) e 
-como príncipe [Cupertino](Cupertino%20Kurt). Em poucos dias, Brazilburg subdividiu-se em duas regiões: 
+Em 2 de janeiro de 2021, foi criado o Reino de Brazilburg, tendo como rei [Don Ravi](Don_Ravi) e 
+como príncipe [Cupertino](Cupertino_Kurt). Em poucos dias, Brazilburg subdividiu-se em duas regiões: 
 Brazilburg do Sul, uma colônia sob controle do príncipe, e Brazilburg do Norte, a metrópole.
 
 No entanto, em 4 de janeiro de 2021, quando os acampamentos da colônia ao sul começaram a se consolidar 
@@ -128,7 +133,7 @@ crescente pressão interna, resultou na **Guerra dos Dois Nomes**. O conflito op
 a Mitterfürt, contra estrangeiros, amigos pessoais de Wolfi, que apoiavam Fürstenbach. A guerra 
 terminou com a vitória de Mitterfürt.
 
-O Império de Waydines chegou ao fim com a dissolução do [Fly SMP](Fly%20SMP) no dia 24 de fevereiro 
+O Império de Waydines chegou ao fim com a dissolução do [Fly SMP](Fly_SMP) no dia 24 de fevereiro 
 de 2021, do qual o país fazia parte. O encerramento do servidor ocorreu devido a denúncias de banimentos 
 injustos por parte dos moderadores. Curiosamente, ao final do período imperial, Kamchatskiy estava 
 mais desenvolvida do que Mitterfürt, contrastando com o motivo original da independência.
@@ -147,10 +152,10 @@ existir mais de dois países oficiais &mdash; e os [Faccistas](Faccismo) (não c
 Durante o conflito, Cupertino explorou uma brecha de segurança no servidor para obter acesso de 
 operador, garantindo a vitória de Waydines.
 
-Este período se estendeu do final do Fly SMP até o [Delta SMP 3](Delta%20SMP%203).
+Este período se estendeu do final do Fly SMP até o [Delta SMP 3](Delta_SMP_3).
 
 ## Segunda República
-A Segunda República, também chamada de [Nova Waydines](Segunda%20República%20de%20Waydines), começou 
+A Segunda República, também chamada de [Nova Waydines](Segunda_República_de_Waydines), começou 
 com várias reformas políticas implementadas por Cupertino e Don Ravi. Waydines adotou um regime 
 [semipresidencialista](https://pt.wikipedia.org/wiki/Semipresidencialismo) (embora oficialmente se 
 considerasse [parlamentarista](https://pt.wikipedia.org/wiki/Parlamentarismo)) e promulgou sua 
@@ -159,8 +164,8 @@ Esse período foi marcado por intensa agitação política, mas também por um f
 identitário dentro da sociedade waydineense.
 
 Pela primeira vez, o país teve um sistema político realmente organizado. Surgiram o [Partido Nacionalista 
-de Waydines](Partido%20Nacionalista%20de%20Waydines), liderado por Cupertino e com 5 filiados, e o 
-[Partido Aceleracionista de Waydines](Partido%20Aceleracionista%20de%20Waydines), de Don Ravi, com 4 membros. 
+de Waydines](Partido_Nacionalista_de_Waydines), liderado por Cupertino e com 5 filiados, e o 
+[Partido Aceleracionista de Waydines](Partido_Aceleracionista_de_Waydines), de Don Ravi, com 4 membros. 
 As primeiras eleições foram realizadas, elegendo Cupertino como primeiro-ministro e Ravi como presidente. 
 O sistema eleitoral da Segunda República era incomum: o primeiro-ministro era eleito diretamente pelo 
 povo, e os assentos do Parlamento eram preenchidos por [eleição majoritária](https://pt.wikipedia.org/wiki/Sistema_majorit%C3%A1rio) 
@@ -188,14 +193,14 @@ acusado de vários crimes, incluindo:
 - Invasão de propriedades privadas e estatais;
 - Furto do ovo do dragão.
 
-Os eventos ocorreram durante o [Delta SMP 4](Delta%20SMP%204) e resultaram na condenação de 40hzRay 
+Os eventos ocorreram durante o [Delta SMP 4](Delta_SMP_4) e resultaram na condenação de 40hzRay 
 a duas semanas de prisão, após um julgamento que durou inúmeras fases e sessões. No entanto, o 
 servidor terminou antes que ele pudesse cumprir a pena.
 
 ### Guerra Nordenbürgen ✕ Waydines
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741867174/dd80e8ae-b6df-4164-99c3-cca1433011f0.png" description="Lista de Players durante a Guerra" />
 
-No [Delta SMP 5](Delta%20SMP%205), o primeiro servidor a contar com vários países, Waydines viveu 
+No [Delta SMP 5](Delta_SMP_5), o primeiro servidor a contar com vários países, Waydines viveu 
 uma guerra essencial para o fortalecimento de sua identidade nacional. Na época, o país tinha cinco 
 distritos (Nova Hillpath, Mitterfurt, Kamchatskiy, Hasgard e um distrito provisório) e atingiu seu 
 auge populacional. A guerra contra [Nordenbürgen](Nordenbürgen), liderada pelo regime fascista de 
@@ -204,19 +209,19 @@ político do país.
 
 A guerra durou cerca de oito horas e envolveu quase toda Waydines em um chat de voz durante as batalhas.
 A vitória de Waydines aumentou significativamente o moral e o sentimento de identidade nacional. Após 
-a guerra, no [Delta SMP 5.1](Delta%20SMP%5.1), Cupertino nomeou Portugueskiy como rei de Nordenbürgen, 
-formando uma aliança que persiste até hoje entre Waydines e o [Xogunato Ryūsei](Xogunato%20Ryūsei), 
+a guerra, no [Delta SMP 5.1](Delta_SMP%5.1), Cupertino nomeou Portugueskiy como rei de Nordenbürgen, 
+formando uma aliança que persiste até hoje entre Waydines e o [Xogunato Ryūsei](Xogunato_Ryūsei), 
 sucessor de Norden.
 
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741877950/Communist_Waydines_yzdfnk.svg" maxWidth="12rem" description="Logotipo do Partido Socialista de Waydines" />
 
 Nesse período, o Partido Aceleracionista foi renomeado para [Partido Socialista de 
-Waydines](Partido%20Socialista%20de%20Waydines) e começou uma disputa mais acirrada com o Partido 
+Waydines](Partido_Socialista_de_Waydines) e começou uma disputa mais acirrada com o Partido 
 Nacionalista. A crescente instabilidade política foi explorada por [Emmeria](Emmeria), um país com o 
 qual Waydines estava em Guerra Fria.
 
 ### Intifadas Waydineenses e queda da Segunda República
-Durante as tensões políticas, surgiram as [Intifadas waydineenses](Intifadas%20de%20Waydines), nas 
+Durante as tensões políticas, surgiram as [Intifadas waydineenses](Intifadas_de_Waydines), nas 
 quais moradores de Mitterfurt, apoiadores do Partido Nacionalista, e de Kamchatskiy, grande eleitorado 
 do Partido Socialista, passaram a se hostilizar mutuamente. O crescente conflito levou à renúncia de 
 Cupertino, sendo Shazy, único parlamentar socialista, nomeado primeiro-ministro.
@@ -241,24 +246,24 @@ uma bandeira tricolor sem brasão, a qual país usa até hoje. Esse período dur
 até a proclamação da Terceira República.
 
 ## Terceira República (Dias de Hoje)
-A Terceira República foi proclamada por debaixo dos panos durante o [Don SMP 1](Don%20SMP%201), o qual
+A Terceira República foi proclamada por debaixo dos panos durante o [Don SMP 1](Don_SMP_1), o qual
 Waydines não participou diretamente, mas teve certo envolvimento na derrubada de Kamchatskiy durante 
-o [Don SMP 2](Don%20SMP%202). Waydines também se tornou uma república parlamentarista verdadeira a partir 
+o [Don SMP 2](Don_SMP_2). Waydines também se tornou uma república parlamentarista verdadeira a partir 
 da formulação aqui de uma nova constituição.
 
 Após a queda de Kamchatskiy, o país foi tornado em um distrito de Waydines novamente, dentro dos 
 termos do acordo de paz. A Terceira República teve sua primeira eleição entre os [Social Democratas
-](Social%20Democratas%20(Waydines)) (`SD`), sucessor do Partido Nacionalista, e o [Partido Democrático 
-Popular](Partido%20Democrático%20Popular) (`PDP`), sucessor do Partido Socialista. Os resultados foram 
+](Social_Democratas_(Waydines)) (`SD`), sucessor do Partido Nacionalista, e o [Partido Democrático 
+Popular](Partido_Democrático_Popular) (`PDP`), sucessor do Partido Socialista. Os resultados foram 
 3 assentos ao PDP e 4 ao SD. No dia seguinte, Kamchatskiy declarou independência pacificamente, formando 
 Frigustell.
 
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Mapa do continente de Elísia durante o Cup SMP, antes da compra do território oeste de Norden por Waydines" />
 
-Bem mais no futuro, durante o [Cup SMP](Cup%20SMP), surgiu a etnia elisiana, resultado do intercâmbio 
+Bem mais no futuro, durante o [Cup SMP](Cup_SMP), surgiu a etnia elisiana, resultado do intercâmbio 
 cultural entre Waydines, o Império de Nordenbürgen e o [Reino Teocrático de Osmaria](Osmaria), todos 
 localizados no continente de Elísia. O crescimento dessa identidade levou à criação da [União 
-Elisiana](União%20Elisiana), uma confederação que garantiu um desenvolvimento pacífico e econômico 
+Elisiana](União_Elisiana), uma confederação que garantiu um desenvolvimento pacífico e econômico 
 aos três países, apesar de longos debates sobre sua estrutura e a possibilidade de uma moeda única.
 
 Atualmente, Waydines é um exemplo de democracia plena e pacífica, sendo o país mais diplomático do 
@@ -288,7 +293,7 @@ Atualmente o país conta com somente um partido, os Social Democratas, mas, com 
 populacional de Waydines, provavelmente terá em breve um segundo partido, que, quando formado, iniciará
 novas eleições nacionais, que estão pendentes desde 6 de julho de 2024.
 
-As eleições são conduzidas pela [Corte Superior Eleitoral](Corte%20Superior%20Eleitoral%20(Waydines)), 
+As eleições são conduzidas pela [Corte Superior Eleitoral](Corte_Superior_Eleitoral_(Waydines)), 
 que exerce poder executivo e judiciário sobre as matérias eleitorais. Eleições ao Parlamento são feitas 
 com o sistema de [voto único transferível](https://pt.wikipedia.org/wiki/Voto_%C3%BAnico_transfer%C3%ADvel) 
 em [lista fechada](https://pt.wikipedia.org/wiki/Lista_fechada); enquanto as eleições para Conselheiro 
