--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -9,7 +9,7 @@ short_description: "Country in Elysium"
 [Elysian](Elysium) and a [Brazilbourgish](Brazilburg) country (which makes it a cousin-nation of 
 [Frigustell](Frigustell)). Composed of two districts, being these its planned capital [Mitterfurt](Mitterfurt) 
 and the city of [Gremont](Gremont), it has a total of 14 officially registered citizens (2024).
-Addittionally, Waydines is a member and founder state of the [Elysian Union](Elysian%20Union).
+Addittionally, Waydines is a member and founder state of the [Elysian Union](Elysian_Union).
 
 <QuickFacts title="República Parlamentarista de Waydines">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
@@ -19,10 +19,15 @@ Addittionally, Waydines is a member and founder state of the [Elysian Union](Ely
     </tr>
     <tr>
         <td>Official languages</td>
-        <td>English, portuguese</td>
+        <td>
+            <a href="https://en.wikipedia.org/wiki/English_language">English</a> &centerdot; 
+            <a href="https://en.wikipedia.org/wiki/Portuguese_language">Portuguese</a>
+        </td>
     </tr>
     <tr>
-        <td>Denonym</td>
+        <td>
+            <a href="https://en.wikipedia.org/wiki/Demonyn">Demonyn(s)</a>
+        </td>
         <td>Waydinean</td>
     </tr>
     <tr>
@@ -34,11 +39,11 @@ Addittionally, Waydines is a member and founder state of the [Elysian Union](Ely
     </tr>
     <tr class="small">
         <td>Prime-Minister</td>
-        <td><a href="Cupertino%20Kurt">Cupertino Kurt</a></td>
+        <td><a href="Cupertino_Kurt">Cupertino Kurt</a></td>
     </tr>
     <tr>
         <td>Legislature</td>
-        <td><a href="Parliament%20of%20Waydines">Parliament of Waydines</a></td>
+        <td><a href="Parliament_of_Waydines">Parliament of Waydines</a></td>
     </tr>
     <tr>
         <td>History</td>
@@ -88,14 +93,14 @@ Addittionally, Waydines is a member and founder state of the [Elysian Union](Ely
 
 # Etymology
 The name “Waydines” has uncertain origins. It was chosen shortly after the war of independence, having
-been proposed by [Wolfi Hraje](Wolfi%20Hraje), who is no longer part of the community. The original
+been proposed by [Wolfi Hraje](Wolfi_Hraje), who is no longer part of the community. The original
 meaning has been lost over time; however, the most probable hypothesis is that it derives from Anglo-Saxon
 and that it means something like “People of Great Love.” In runes, it would be represented as ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
 
 # History
 ## Empire of Waydines
-On January 2, 2021, the Kingdom of Brazilburg was created, with [Don Ravi](Don%20Ravi) as king and 
-[Cupertino](Cupertino%20Kurt) as prince. Within a few days, Brazilburg was subdivided into two regions: 
+On January 2, 2021, the Kingdom of Brazilburg was created, with [Don Ravi](Don_Ravi) as king and 
+[Cupertino](Cupertino_Kurt) as prince. Within a few days, Brazilburg was subdivided into two regions: 
 Southern Brazilburg, a colony under the prince's control, and Northern Brazilburg, the metropolis.
 
 However, on January 4, 2021, when the colony's camps in the south began to consolidate into a city, 
@@ -126,7 +131,7 @@ Mitterfürt in the plebiscite, combined with growing internal pressure, resulted
 Two Names**. The conflict pitted Brazilians, who favored Mitterfürt, against foreigners, personal 
 friends of Wolfi, who supported Fürstenbach. The war ended with Mitterfürt's victory.
 
-The Empire of Waydines came to an end with the dissolution of [Fly SMP](Fly%20SMP) on February 24, 
+The Empire of Waydines came to an end with the dissolution of [Fly SMP](Fly_SMP) on February 24, 
 2021, of which the country was a part. The server was shut down due to complaints of unjust bans by 
 moderators. Curiously, by the end of the imperial period, Kamchatskiy was more developed than 
 Mitterfürt, contrasting with the original reason for independence.
@@ -142,20 +147,20 @@ The most relevant event of this phase was the war between the Confederation of C
 the country created by Don Ravi that served as a “mask” for Waydines, in an environment where no more 
 than two official countries could exist — and the [Faccists](Faccists) (not to be confused with fascists). 
 During the conflict, Cupertino exploited a security breach in the server to obtain operator access, 
-ensuring Waydines' victory. This period extended from the end of Fly SMP until [Delta SMP 3](Delta%20SMP%203).
+ensuring Waydines' victory. This period extended from the end of Fly SMP until [Delta SMP 3](Delta_SMP_3).
 
-This period extended from the end of Fly SMP until [Delta SMP 3](Delta%20SMP%203).
+This period extended from the end of Fly SMP until [Delta SMP 3](Delta_SMP_3).
 
 ## Second Republic
-The Second Republic, also called [New Waydines](Second%20Republic%20of%20Waydines), began with several 
+The Second Republic, also called [New Waydines](Second_Republic_of_Waydines), began with several 
 political reforms implemented by Cupertino and Don Ravi. Waydines adopted a [semi-presidential](https://en.wikipedia.org/wiki/Semi-presidential_system) 
 regime (although officially it considered itself [parliamentary](https://en.wikipedia.org/wiki/Parliamentary_system)) and 
 promulgated its first constitution, called the _Constssung_. Additionally, Mitterfürt was renamed to 
 Mitterfurt. This period was marked by intense political agitation, but also by a cultural and identity 
 flourishing within Waydinean society.
 
-For the first time, the country had a truly organized political system. The [Nationalist Party of Waydines](Nationalist%20Party%20of%20Waydines), 
-led by Cupertino with 5 members, and the [Accelerationist Party of Waydines](Accelerationist%20Party%20of%20Waydines), 
+For the first time, the country had a truly organized political system. The [Nationalist Party of Waydines](Nationalist_Party_of_Waydines), 
+led by Cupertino with 5 members, and the [Accelerationist Party of Waydines](Accelerationist_Party_of_Waydines), 
 led by Don Ravi with 4 members, emerged. The first elections were held, electing Cupertino as prime 
 minister and Ravi as president. The electoral system of the Second Republic was unusual: the prime 
 minister was directly elected by the people, and Parliament seats were filled through a [majority election](https://en.wikipedia.org/wiki/First-past-the-post_voting)
@@ -184,14 +189,14 @@ He was accused of various crimes, including:
 - Invasion of private and state properties;
 - Theft of the dragon egg.
 
-The events occurred during [Delta SMP 4](Delta%20SMP%204) and resulted in 40hzRay being sentenced to 
+The events occurred during [Delta SMP 4](Delta_SMP_4) and resulted in 40hzRay being sentenced to 
 two weeks in prison, after a trial that lasted numerous phases and sessions. However, the server 
 ended before he could serve his sentence.
 
 ### The Nordenbürger-Waydinean War
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741867174/dd80e8ae-b6df-4164-99c3-cca1433011f0.png" description="Player List during the War" />
 
-In [Delta SMP 5](Delta%20SMP%205), the first server to feature multiple countries, Waydines experienced 
+In [Delta SMP 5](Delta_SMP_5), the first server to feature multiple countries, Waydines experienced 
 a war essential to strengthening its national identity. At the time, the country had five districts 
 (New Hillpath, Mitterfurt, Kamchatskiy, Hasgard, and a provisional district) and reached its population 
 peak. The war against [Nordenbürgen](Nordenbürgen), led by the fascist regime of [etc_pt](etc_pt), 
@@ -200,18 +205,18 @@ country.
 
 The war lasted about eight hours and involved almost all of Waydines in a voice chat during the battles. 
 Waydines' victory significantly increased national morale and sense of identity. After the war, in 
-[Delta SMP 5.1](Delta%20SMP%5.1), Cupertino appointed Portugueskiy as king of Nordenbürgen, forming 
-an alliance that persists to this day between Waydines and the [Ryūsei Shogunate](Ryūsei%20Shogunate), 
+[Delta SMP 5.1](Delta_SMP%5.1), Cupertino appointed Portugueskiy as king of Nordenbürgen, forming 
+an alliance that persists to this day between Waydines and the [Ryūsei Shogunate](Ryūsei_Shogunate), 
 Norden's successor.
 
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741877950/Communist_Waydines_yzdfnk.svg" maxWidth="12rem" description="Logo of the Socialist Party of Waydines" />
 
-During this period, the Accelerationist Party was renamed to the [Socialist Party of Waydines](Socialist%20Party%20of%20Waydines) 
+During this period, the Accelerationist Party was renamed to the [Socialist Party of Waydines](Socialist_Party_of_Waydines) 
 and began a more heated dispute with the Nationalist Party. The growing political instability was 
 exploited by [Emmeria](Emmeria), a country with which Waydines was in a Cold War.
 
 ### Waydinean Intifadas and Fall of the Second Republic
-During the political tensions, the [Waydinean Intifadas](Intifadas%20de%20Waydines) emerged, in which 
+During the political tensions, the [Waydinean Intifadas](Intifadas_de_Waydines) emerged, in which 
 residents of Mitterfurt, supporters of the Nationalist Party, and Kamchatskiy, a major electorate of 
 the Socialist Party, began to show hostility toward each other. The growing conflict led to Cupertino's 
 resignation, with Shazy, the only socialist parliamentarian, being appointed prime minister.
@@ -238,23 +243,23 @@ adopting a tricolor flag without a coat of arms, which the country still uses to
 This period lasted about a week, until the proclamation of the Third Republic.
 
 ## Third Republic (Present Day)
-The Third Republic was proclaimed behind the scenes during [Don SMP 1](Don%20SMP%201), which Waydines 
+The Third Republic was proclaimed behind the scenes during [Don SMP 1](Don_SMP_1), which Waydines 
 did not directly participate in, but had some involvement in the overthrow of Kamchatskiy during 
-[Don SMP 2](Don%20SMP%202). Waydines also became a true parliamentary republic with the formulation 
+[Don SMP 2](Don_SMP_2). Waydines also became a true parliamentary republic with the formulation 
 of a new constitution.
 
 After the fall of Kamchatskiy, the city was made a district of Waydines again, within the terms of 
-the peace agreement. The Third Republic had its first election between the [Social Democrats](Social%20Democrats%20(Waydines)) 
-(`SD`), successor to the Nationalist Party, and the [People's Democratic Party](People's%20Democratic%20Party) 
+the peace agreement. The Third Republic had its first election between the [Social Democrats](Social_Democrats_(Waydines)) 
+(`SD`), successor to the Nationalist Party, and the [People's Democratic Party](People's_Democratic_Party) 
 (`PDP`), successor to the Socialist Party. The results were 3 seats for the PDP and 4 for the SD. 
 The following day, Kamchatskiy peacefully declared independence, forming Frigustell.
 
 <Picture image="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741872003/elisiamapa_ecwy3g.png" height="20rem" description="Map of the continent of Elysium during the Cup SMP, before Waydines bought the western territories of Norden" />
 
-Much later, during the [Cup SMP](Cup%20SMP), the Elysian ethnicity emerged, resulting from cultural 
+Much later, during the [Cup SMP](Cup_SMP), the Elysian ethnicity emerged, resulting from cultural 
 exchange between Waydines, the Empire of Nordenbürgen, and the [Theocratic Kingdom of Osmaria](Osmaria), 
 all located on the continent of Elysium. The growth of this identity led to the creation of the 
-[Elysian Union](Elysian%20Union), a confederation that ensured peaceful and economic development for 
+[Elysian Union](Elysian_Union), a confederation that ensured peaceful and economic development for 
 the three countries, despite lengthy debates about its structure and the possibility of a single 
 currency for all the countries.
 
@@ -287,7 +292,7 @@ Currently, the country has only one party, the Social Democrats, but with the re
 of Waydines, it will likely soon have a second party, which, when formed, will initiate new national 
 elections, which have been pending since July 6, 2024.
 
-Elections are conducted by the [Superior Electoral Court](Superior%20Electoral%20Court%20(Waydines)), 
+Elections are conducted by the [Superior Electoral Court](Superior_Electoral_Court_(Waydines)), 
 which exercises executive and judicial power over electoral matters. Elections to Parliament are held 
 with the [single transferable vote](https://en.wikipedia.org/wiki/Single_transferable_vote) system on 
 a [closed list](https://en.wikipedia.org/wiki/Closed_list); while elections for District Councilor are 
