--- a/src/pt/cupertino_kurt.mdx
+++ b/src/pt/cupertino_kurt.mdx
@@ -5,9 +5,9 @@ short_description: "Player Notório"
 ---
 
 **Cupertino von Kurt**, ou **Cupertino Kurt**, é um político waydineense, servindo como Primeiro-Ministro
-desde 2022. Membro do partido [Social Democratas](Social%20Democratas%20(Waydines)), já foi rei de 
+desde 2022. Membro do partido [Social Democratas](Social_Democratas_(Waydines)), já foi rei de 
 [Waydines](Waydines) durante o período imperial, presidente na Primeira República e eleito duas vezes 
-Primeiro-Ministro na [Segunda República](Segunda%20República%20de%20Waydines). Também é programador,
+Primeiro-Ministro na [Segunda República](Segunda_República_de_Waydines). Também é programador,
 escritor, historiador e teólogo servindo como presbítero no presbitério de [Kibosaki](Kibosaki) da 
 [Igreja de Made](Madeísmo).
 <QuickFacts title="Cupertino von Kurt">
@@ -30,7 +30,7 @@ escritor, historiador e teólogo servindo como presbítero no presbitério de [K
     </tr>
     <tr>
         <td>Partido Político</td>
-        <td>[Social Democratas](Social%20Democratas%20(Waydines))</td>
+        <td>[Social Democratas](Social_Democratas_(Waydines))</td>
     </tr>
     <tr>
         <td>Crença</td>
@@ -61,12 +61,12 @@ Como Primeiro-Ministro, Cupertino liderou a Assembleia Constituinte de Waydines,
 fundamental na redação da nova Constituição Nacional, considerada a mais democrática do mundo. Seu 
 governo tem sido caracterizado pelo fortalecimento dos direitos civis e pela criação de várias leis 
 básicas para a fundamentação de Waydines como um país organizado e republicano. Embora tenha sido uma 
-figura controversa no passado, principalmente durante o período da [Segunda República](Segunda%20República%20de%20Waydines), 
+figura controversa no passado, principalmente durante o período da [Segunda República](Segunda_República_de_Waydines), 
 atualmente é bem visto pelo povo devido à estabilidade e avanços institucionais promovidos em sua 
 gestão.
 
 Seu governo destacou-se na diplomacia, promovendo paz e cooperação global. Graças à sua habilidade 
 diplomática incomparável, Waydines tornou-se um dos países mais pacíficos do mundo. Fomentou a formação 
-de organizações internacionais para a paz, como a [Crescente Vermelha](Crescente%20Vermelha) e o 
-[Fórum das Nações](Fórum%20das%20Nações); além de alianças, tratados e pactos como a [União Elisiana
-](União%20Elisiana) e o [Pacto Solar](Pacto%20Solar).
+de organizações internacionais para a paz, como a [Crescente Vermelha](Crescente_Vermelha) e o 
+[Fórum das Nações](Fórum_das_Nações); além de alianças, tratados e pactos como a [União Elisiana
+](União_Elisiana) e o [Pacto Solar](Pacto_Solar).
