Changes to Waydines' Article, Created Article for Braviary and Began Staging Process for Madeism

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -94,8 +94,9 @@ Addittionally, Waydines is a member and founder state of the [Elysian Union](Ely
 # Etymology
 The name “Waydines” has uncertain origins. It was chosen shortly after the war of independence, having
 been proposed by [Wolfi Hraje](Wolfi_Hraje), who is no longer part of the community. The original
-meaning has been lost over time; however, the most probable hypothesis is that it derives from Anglo-Saxon
-and that it means something like “People of Great Love.” In runes, it would be represented as ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
+meaning has been lost over time; however, the most probable hypothesis is that it derives from [Anglo-Saxon](https://en.wikipedia.org/wiki/Old_English)
+and that it means something like “People of Great Love.” In [runes](https://en.wikipedia.org/wiki/Anglo-Saxon_runes), 
+it would be represented as ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
 
 # History
 ## Empire of Waydines
