--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -94,8 +94,9 @@ oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União El
 # Etimologia
 O nome “Waydines” possui origem incerta. Foi escolhido logo após a guerra de independência, tendo 
 sido proposto por [Wolfi Hraje](Wolfi_Hraje), que não faz mais parte da comunidade. O significado 
-original perdeu-se ao longo do tempo, entretanto, a hipótese mais provável é que derive do anglo-saxão,
-significando algo como “Povo de Grande Amor”. Em runas, seria representado como ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
+original perdeu-se ao longo do tempo, entretanto, a hipótese mais provável é que derive do [anglo-saxão](https://pt.wikipedia.org/wiki/Ingl%C3%AAs_antigo),
+significando algo como “Povo de Grande Amor”. Em [runas](https://pt.wikipedia.org/wiki/Escrita_futhorc), 
+seria representado como ::ᚹᛁᛖᛞᛖᚾᚪᛋ::.
 
 # História
 
