Fix Minor Spelling Mistake

--- a/src/en/madeism.mdx
+++ b/src/en/madeism.mdx
@@ -102,7 +102,7 @@ who decided to reform their religions to make them more structured and instituti
 Thus, Madeism adopted a [Presbyterian](https://en.wikipedia.org/wiki/Presbyterianism) structure, 
 established the subdistrict of [Kibosaki](Kibosaki) as its religious center, and formed presbyteries
 and temples. The central [synod](https://en.wikipedia.org/wiki/Synod), the highest seat of Madeism, 
-was created to legislate on doctrines, culminating in the institution of the _Church the Renewed Faith in Made_.
+was created to legislate on doctrines, culminating in the institution of the _Church of Renewed Faith in Made_.
 
 # Structure
 
