Fix Major Historical Error

--- a/src/en/madeism.mdx
+++ b/src/en/madeism.mdx
@@ -88,10 +88,10 @@ of the world's population and being the majority religion in [Waydines](Waydines
 </QuickFacts>
 
 # History
-Madeism originated unexpectedly during a competitive event at EDG SMP. Initially a phenomenon of 
-fandom and humor, devotion to the figure of Made began to gain strength among the participants. What 
-started as a joke soon evolved into a deeper cultural identity, especially with the rise of Waydinean 
-nationalism in the Second Republic of Waydines.
+Madeism originated unexpectedly during a competitive event among the community that was part of the [EDG SMP](EDG_SMP). 
+Initially a phenomenon of fandom and humor, devotion to the figure of Made began to gain strength 
+among the participants. What started as a joke soon evolved into a deeper cultural identity, especially 
+with the rise of Waydinean nationalism in the Second Republic of Waydines.
 
 However, Madeism as it exists today was born only at the beginning of the Third Republic, when there 
 was a growing entry of Dorenist Church members into the servers. Dorenism was a previous religion, 
