--- a/src/pt/madeismo.mdx
+++ b/src/pt/madeismo.mdx
@@ -88,10 +88,11 @@ da população mundial e sendo a religião majoritária em [Waydines](Waydines) 
 </QuickFacts>
 
 # História
-O Madeísmo teve origem de forma inesperada durante um evento competitivo no EDG SMP. Inicialmente um 
-fenômeno de torcida e humor, a devoção à figura de Made começou a ganhar força entre os participantes. 
-O que começou como uma brincadeira logo evoluiu para uma identidade cultural mais profunda, especialmente 
-com a ascensão do nacionalismo waydineense na Segunda República de Waydines.
+O Madeísmo teve origem de forma inesperada durante um evento competitivo na comunidade em volta do [EDG 
+SMP](EDG_SMP). Inicialmente um fenômeno de torcida e humor, a devoção à figura de Made começou a ganhar 
+força entre os participantes. O que começou como uma brincadeira logo evoluiu para uma identidade 
+cultural mais profunda, especialmente com a ascensão do nacionalismo waydineense na Segunda República 
+de Waydines.
 
 Entretanto, o madeísmo como é hoje nasceu somente no início da Terceira República, quando houve a
 crescente entrada de membros da Igreja Dorenista nos servidores. O Dorenismo era uma religião anterior,
