Added articles related to Madeism

--- a/src/en/madeism.mdx
+++ b/src/en/madeism.mdx
@@ -104,15 +104,21 @@ established the subdistrict of [Kibosaki](Kibosaki) as its religious center, and
 and temples. The central [synod](https://en.wikipedia.org/wiki/Synod), the highest seat of Madeism, 
 was created to legislate on doctrines, culminating in the institution of the _Church of Renewed Faith in Made_.
 
+Today, Madeism stands as the largest religion since the fall of Dorenism as a result of most Dorenists
+having stopped playing.
+
 # Structure
 
 The Church of Renewed Faith in Made currently has an organized hierarchy as follows:
 
-**Pastors:** Responsible for temples and religious services. They are the ones who elect the presbyters of their region.
+**Pastors:** Responsible for temples and religious services. They are the ones who elect the presbyters 
+of their region.
 
-**Presbyters:** Form the presbytery and ensure adherence to the Confession of Faith. Only they can serve in cathedrals and basilicas.
+**Presbyters:** Form the presbytery and ensure adherence to the Confession of Faith. Only they can 
+serve in cathedrals and basilicas.
 
-**Synod of Kibosaki:** The supreme body, bringing together all presbyters to define religious legislation and possible doctrinal changes.
+**Synod of Kibosaki:** The supreme body, bringing together all presbyters to define religious legislation 
+and possible doctrinal changes.
 
 # Practices and Liturgies
 ## Communion
@@ -139,10 +145,11 @@ is a moment of celebration and reflection, with a renewed emphasis on the spirit
 for others, according to the Covenants and the practice of offering blessed rice from the Covenant of Han.
 
 ## Lunar Calendar
-Madeism follows a lunar calendar, which is fundamental to the organization of festivities and religious 
-rituals, such as the Midnight Festival. The observation of the Moon's phases guides the dates of 
-celebrations and is central to the spirituality of the faithful, as it reflects the natural cycles of 
-life and renewal.
+Madeism follows a [lunar calendar](https://en.wikipedia.org/wiki/Lunar_calendar), which is fundamental 
+to the organization of festivities and religious rituals, such as the Midnight Festival. The observation 
+of the [Moon's phases](https://en.wikipedia.org/wiki/Lunar_phase) guides the dates of celebrations 
+and is central to the spirituality of the faithful, as it reflects the natural cycles of life and 
+renewal.
 
 | Month | Japanese Name | Meaning |
 |-------|--------------|----------|
