--- a/src/pt/madeismo.mdx
+++ b/src/pt/madeismo.mdx
@@ -105,15 +105,21 @@ estabeleceu o subdistrito de [Kibosaki](Kibosaki) como seu centro religioso e fo
 templos. O [sínodo](https://pt.wikipedia.org/wiki/S%C3%ADnodo) central, sede máxima do Madeísmo, foi 
 criado para legislar sobre doutrinas, culminando na instituição da _Igreja da Fé Renovada em Made_.
 
+Nos dias de hoje, o madeísmo é a maior religião do mundo desde a queda do dorenismo, que teve como 
+causa principal a saída de jogadores dorenistas.
+
 # Estrutura
 
 A Igreja da Fé Renovada em Made atualmente possui uma hierarquia organizada da seguinte forma:
 
-**Pastores:** Responsáveis pelos templos e pelos serviços religiosos. São eles que elegem os presbíteros de sua região.
+**Pastores:** Responsáveis pelos templos e pelos serviços religiosos. São eles que elegem os presbíteros 
+de sua região.
 
-**Presbíteros:** Formam o presbitério e garantem a adesão à Confissão de Fé. Somente eles podem servir em catedrais e basílicas.
+**Presbíteros:** Formam o presbitério e garantem a adesão à Confissão de Fé. Somente eles podem servir 
+em catedrais e basílicas.
 
-**Sínodo de Kibosaki:** É o órgão supremo, reunindo todos os presbíteros para definir legislação religiosa e eventuais mudanças doutrinárias.
+**Sínodo de Kibosaki:** É o órgão supremo, reunindo todos os presbíteros para definir legislação 
+religiosa e eventuais mudanças doutrinárias.
 
 # Práticas e Liturgias
 ## Comunhão
@@ -141,9 +147,11 @@ cuidado com os outros, conforme a Aliança de Keito e a prática de oferecer arr
 de Han.
 
 ## Calendário Lunar
-O Madeísmo segue um calendário lunar, que é fundamental para a organização das festividades e rituais 
-religiosos, como o Festival da Meia-Noite. A observação das fases da Lua orienta as datas das celebrações 
-e é central para a espiritualidade dos fiéis, pois reflete os ciclos naturais da vida e da renovação.
+O Madeísmo segue um [calendário lunar](https://pt.wikipedia.org/wiki/Calend%C3%A1rio_lunar), que é 
+fundamental para a organização das festividades e rituais religiosos, como o Festival da Meia-Noite. 
+A observação das [fases da Lua](https://pt.wikipedia.org/wiki/Fases_da_Lua) orienta as datas das 
+celebrações e é central para a espiritualidade dos fiéis, pois reflete os ciclos naturais da vida e 
+da renovação.
 
 | Mês   | Nome Japonês | Significado |
 |-------|--------------|-------------|
