Made article for Delta SMP 3 a 'snub'

--- a/src/pt/delta_smp_3.mdx
+++ b/src/pt/delta_smp_3.mdx
@@ -2,6 +2,7 @@
 id: "deltasmp3"
 title: "Delta SMP 3"
 short_description: "Servidor de Minecraft"
+snub: true
 ---
 
 Delta SMP 3 foi o terceiro servidor da franquia Delta SMP, foi um SMP igual aos anteriores e foi o 
