Fixed Waydines article not being properly translated to English

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -11,7 +11,7 @@ short_description: "Country in Elysium"
 and the city of [Gremont](Gremont), it has a total of 14 officially registered citizens (2024).
 Addittionally, Waydines is a member and founder state of the [Elysian Union](Elysian_Union).
 
-<QuickFacts title="República Parlamentarista de Waydines">
+<QuickFacts title="Parliamentary Republic of Waydines">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
     <tr>
         <td>Capital</td>
