Fixed shogun Niszara's name in Waydines' article

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -201,12 +201,12 @@ In [Delta SMP 5](Delta_SMP_5), the first server to feature multiple countries, W
 a war essential to strengthening its national identity. At the time, the country had five districts 
 (New Hillpath, Mitterfurt, Kamchatskiy, Hasgard, and a provisional district) and reached its population 
 peak. The war against [Nordenbürgen](Nordenbürgen), led by the fascist regime of [etc_pt](etc_pt), 
-began after Waydines offered asylum to [Portugueskiy](Portugueskiy), a political refugee from that 
+began after Waydines offered asylum to [Niszara](Niszara_Ryūsei), a political refugee from that 
 country.
 
 The war lasted about eight hours and involved almost all of Waydines in a voice chat during the battles. 
 Waydines' victory significantly increased national morale and sense of identity. After the war, in 
-[Delta SMP 5.1](Delta_SMP%5.1), Cupertino appointed Portugueskiy as king of Nordenbürgen, forming 
+[Delta SMP 5.1](Delta_SMP%5.1), Cupertino appointed Niszara as king of Nordenbürgen, forming 
 an alliance that persists to this day between Waydines and the [Ryūsei Shogunate](Ryūsei_Shogunate), 
 Norden's successor.
 
