--- a/src/pt/waydines.mdx
+++ b/src/pt/waydines.mdx
@@ -15,7 +15,7 @@ oficialmente (2024). Adicionalmente, é um país-membro e fundador da [União El
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741742679/Waydines_mjsz8k.svg" coatOfArms="https://res.cloudinary.com/dp8usdrjl/image/upload/v1741798636/Sol_tfbh4k.svg"/>
     <tr>
         <td>Capital</td>
-        <td>Mitterfurt</td>
+        <td><a href="Mitterfurt">Mitterfurt</a></td>
     </tr>
     <tr>
         <td>Línguas oficiais</td>
@@ -205,12 +205,12 @@ No [Delta SMP 5](Delta_SMP_5), o primeiro servidor a contar com vários países,
 uma guerra essencial para o fortalecimento de sua identidade nacional. Na época, o país tinha cinco 
 distritos (Nova Hillpath, Mitterfurt, Kamchatskiy, Hasgard e um distrito provisório) e atingiu seu 
 auge populacional. A guerra contra [Nordenbürgen](Nordenbürgen), liderada pelo regime fascista de 
-[etc_pt](etc_pt), começou após Waydines oferecer asilo a [Portugueskiy](Portugueskiy), um perseguido 
+[etc_pt](etc_pt), começou após Waydines oferecer asilo a [Niszara](Niszara_Ryūsei), um perseguido 
 político do país.
 
 A guerra durou cerca de oito horas e envolveu quase toda Waydines em um chat de voz durante as batalhas.
 A vitória de Waydines aumentou significativamente o moral e o sentimento de identidade nacional. Após 
-a guerra, no [Delta SMP 5.1](Delta_SMP%5.1), Cupertino nomeou Portugueskiy como rei de Nordenbürgen, 
+a guerra, no [Delta SMP 5.1](Delta_SMP%5.1), Cupertino nomeou Niszara como rei de Nordenbürgen, 
 formando uma aliança que persiste até hoje entre Waydines e o [Xogunato Ryūsei](Xogunato_Ryūsei), 
 sucessor de Norden.
 
