Made an actual article for Kibosaki

--- a/src/pt/kibosaki.mdx
+++ b/src/pt/kibosaki.mdx
@@ -2,12 +2,25 @@
 id: "kibosaki"
 title: "Kibosaki"
 banner: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1743208613/kibosaki_p3rcla.svg"
-short_description: "Subdistrict in Waydines"
+short_description: "Subdistrito em Waydines"
+stub: true
 ---
 
-**Kibosaki** é um burger
+**Kibosaki**, oficialmente **Subdistrito Nacional Especial de Kibosaki**, é uma unidade autônoma
+localizada no território de [Waydines](Waydines), com status equivalente ao de um distrito pleno.
+Totalmente circundado por [Mitterfurt](Mitterfurt), a
+[capital](https://pt.wikipedia.org/wiki/Capital) nacional, Kibosaki foi desmembrado desta durante a
+[Devolução](https://pt.wikipedia.org/wiki/Devolu%C3%A7%C3%A3o) de 9 de novembro de 2024, processo
+que definiu oficialmente a estrutura administrativa do país.
 
-<QuickFacts title="Kibosaki" subtitle="Subdistrito Nacional">
+Seu governo é exercido pelo [Sínodo](https://pt.wikipedia.org/wiki/S%C3%ADnodo) de Kibosaki, a mais
+alta instância da [Igreja de Made](Madeísmo), que detém soberania reconhecida internacionalmente,
+embora sujeita aos limites da constituição nacional quanto a decisões administrativas referentes ao
+subdistrito. Kibosaki destaca-se por ser o centro espiritual e administrativo da fé madeísta,
+funcionando como [enclave](https://pt.wikipedia.org/wiki/Enclave)
+[teocrático](https://pt.wikipedia.org/wiki/Teocracia) dentro da capital.
+
+<QuickFacts title="Kibosaki" subtitle="Subdistrito Nacional Especial">
     <CountrySymbols flag="https://res.cloudinary.com/dp8usdrjl/image/upload/v1743208613/kibosaki_p3rcla.svg" />
     <tr>
         <td>País</td>
@@ -27,28 +40,36 @@ short_description: "Subdistrict in Waydines"
     </tr>
     <tr>
         <td>Homenageia</td>
-        <td><a href="Kibo_(Madeísmo)">Kibo</a></td>
+        <td>
+            <a href="Kibo_(Madeísmo)">Kibo</a>
+        </td>
+    </tr>
+    <tr>
+        <td>Idioma litúrgico</td>
+        <td><a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_japonesa">Japonês</a></td>
     </tr>
     <tr>
         <td>Governo</td>
         <td>
-            <a href="https://pt.wikipedia.org/wiki/Teocracia">Teocracia</a> 
-            <a href="https://pt.wikipedia.org/wiki/S%C3%ADnodo">sinodal</a>-
-            <a href="https://pt.wikipedia.org/wiki/Presbit%C3%A9rio_(protestantismo)">presbiteriana</a>
+            <a href="https://pt.wikipedia.org/wiki/Teocracia">Teocracia</a>
+            <a href="Madeísmo">madeísta</a>
+            <a href="https://pt.wikipedia.org/wiki/S%C3%ADnodo">sinodal</a>-<a href="https://pt.wikipedia.org/wiki/Presbit%C3%A9rio_(protestantismo)">presbiteriana</a>
         </td>
     </tr>
     <tr class="small">
-        <td>Corpo</td>
-        <td><a href="Madeísmo">Igreja de Made</a></td>
+        <td>Entidade soberana</td>
+        <td>
+            <a href="Madeísmo">Igreja de Made</a>
+        </td>
     </tr>
     <tr>
         <td>População</td>
-        <td>Clero madeísta</td>
+        <td>Exclusivamente clero madeísta residente</td>
     </tr>
     <tr>
         <td>ID Regional</td>
         <td>
-            <code>1</code> 
+            <code>1</code>
             (Compartilhado com <a href="Mitterfurt">Mitterfurt</a>)
         </td>
     </tr>
